# zargate_nfts

./: .env.example  docker-compose.override.yml  docker-compose.yml
api/: .env.example  Dockerfile  pyproject.toml
api/app/: .env.example  db.py  main.py  old_main.py  settings.py
backend/: requirements.txt
backend/app/: .env.example  main.py  settings.py
backend/getgems/: config.py  session.py
backend/ton/: config.py  session.py
backend/utility/: calculator.py  converter.py  session.py  sticker.py
bot/: .env.example  Dockerfile
bot/app/: settings.py  token.py
fetcher/: .env.example  Dockerfile
fetcher/app/: fetch_service.py  main.py  retry.py  (+2 more)
monitor/: .env.example  Dockerfile
nginx/: nginx.conf
shared/: pyproject.toml
shared/nft_shared/config/: config.py  settings_base.py
shared/nft_shared/crud/: base.py  basket_repository.py  nft_repository.py  session_repository.py  sticker_repository.py  wallet_repository.py
shared/nft_shared/db/: __init__.py  session.py
shared/nft_shared/getgems/: .env.example  config.py  session.py
shared/nft_shared/getgems/api/: __init__.py  collection.py  nft.py
shared/nft_shared/getgems/parser/: __init__.py  collection.py  nft.py
shared/nft_shared/handlers/: base_handler.py  stickers_handler.py
shared/nft_shared/models/: __init__.py  basket.py  extra.py  nft.py  sticker.py
shared/nft_shared/ton/: .env.example  session.py
shared/nft_shared/ton/api/: collection.py  events.py
shared/nft_shared/ton/parser/: collection.py  events.py  nft.py
shared/nft_shared/utility/: calculator.py  sticker.py
(+59 files in other folders)
